--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-flip-toolkit": "^7.0.7",
     "react-scripts": "3.2.0",
     "uuid": "^3.3.3"
   },
