--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://chris-hesterman.github.io/Dad-Humor",
   "name": "dad-jokes",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +11,8 @@
     "uuid": "^3.3.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
